tests/ui/typeck/issue-33575.stderr
error[E0599]: no method named `foo` found for unit type `()` in the current scope
  --> $DIR/issue-33575.rs:2:18
   |
LL |     let baz = ().foo();
   |                  ^^^ method not found in `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
